k8s/frontend.yaml
# Frontend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64   # Force scheduling on amd64 nodes
      containers:
      - name: frontend
        image: nagapavani2301/frontend:IMAGE_TAG
        ports:
        - containerPort: 80

---
# apiVersion: v1
# kind: Service
# metadata:
#   name: frontend-service
# spec:
#   type: ClusterIP
#   selector:
#     app: frontend
#   ports:
#   - protocol: TCP
#     port: 80
#     targetPort: 80

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
